edit pairing with Max 3

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -355,7 +355,7 @@ Creating a dependency graph helps clarify your understanding of the
 dependencies between the jobs and packages in your release, and provides a
 reference as you add elements to the release.
 
-### <a id="build-graph">Building the Dependency Graph ###
+### <a id="build-graph"> </a>Building the Dependency Graph ###
 
 1. Identify runtime dependencies.
 
