edit pairing with Max 10

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -8,8 +8,8 @@ The workflow for creating BOSH releases is iterative, and looks like this:
 
 This tutorial walks you through creating and deploying a dev release and then
 a final release.
-<!--- You can use the example code to replicate the release we describe in the
-tutorial. -->
+
+<!--- You can use the example code to replicate the release we describe in the tutorial. -->
 
 As a matter of principle, BOSH releases:
 
